Create gcp lb and cloudrun stack

--- a/tf/gcp_load_balancing_cloudrun/nginx/cndf2023.conf
+++ b/tf/gcp_load_balancing_cloudrun/nginx/cndf2023.conf
@@ -1,44 +1,9 @@
 server {
     listen 80;
 
-    location /health {
-        return 200;
-    }
+    server_name  gcp-lb-cloudrun-nginx.cndf2023.unasuke.dev;
 
     location / {
-        return https://$host$request_uri;
-    }
-}
-
-server {
-    listen       443 ssl;
-    http2 on;
-    server_name  aws-nlb-fargate.cndf2023.unasuke.dev;
-
-    ssl_certificate     /etc/certs/cndf2023.unasuke.dev.chained.crt;
-    ssl_certificate_key /etc/certs/cndf2023.unasuke.dev.key;
-    ssl_protocols   TLSv1.3;
-    ssl_prefer_server_ciphers off;
-
-    location / {
-        add_header Alt-Svc 'h3=":9443"; ma=300';
-        root   /data/www;
-        index  index.html;
-    }
-}
-server {
-    listen       9443 quic reuseport;
-    listen       9443 ssl;
-    http3 on;
-    server_name  aws-nlb-fargate.cndf2023.unasuke.dev;
-
-    ssl_certificate     /etc/certs/cndf2023.unasuke.dev.chained.crt;
-    ssl_certificate_key /etc/certs/cndf2023.unasuke.dev.key;
-    ssl_protocols   TLSv1.3;
-    ssl_prefer_server_ciphers off;
-
-    location / {
-        add_header Alt-Svc 'h3=":9443"; ma=300';
         root   /data/www;
         index  index.html;
     }
